--- a/index.html
+++ b/index.html
@@ -107,28 +107,28 @@
             <div class="experience-box">
                 <div class="experience-info">
                     <h4>APPH IT Admin</h4>
-                    <p>I am currently working as an <span>IT, Network and ERP Admin in Arabian Printing and Publishing House Co Ltd.</span>, A leader in printing industry which prints magazines, school books and other printed periodicals. I Transferred from Purchase Dept. in 2009</p>
+                    <p>I am currently working as an IT, Network and ERP Admin in Arabian Printing and Publishing House Co Ltd., A leader in printing industry which prints magazines, school books and other printed periodicals. I Transferred from Purchase Dept. in 2009</p>
                 </div>
             </div>
 
             <div class="experience-box">
                 <div class="experience-info">
                     <h4>APPH Purchase Cordin</h4>
-                    <p>In <span>APPH Co.</span> I was working as a <span>Purchase Coordinator from 2003 to 2009</span>, I learned about purchase procedure from A to Z and it was a wonderful experience</p>
+                    <p>In APPH Co. I was working as a Purchase Coordinator from 2003 to 2009, I learned about purchase procedure from A to Z and it was a wonderful experience</p>
                 </div>
             </div>
 
             <div class="experience-box">
                 <div class="experience-info">
                     <h4>Faizy Watches</h4>
-                    <p>I started my career life in <span>>Riyadh in 2001</span> first I joined in  <span>Faizy Watches and Jewelers as System and ERP Admin</span>. I worked in Aswaq ERP</p>
+                    <p>I started my career life in Riyadh in 2001 first I joined in  Faizy Watches and Jewelers as System and ERP Admin. I worked in Aswaq ERP</p>
                 </div>
             </div>
 
             <div class="experience-box">
                 <div class="experience-info">
                     <h4>WBPCC</h4>
-                    <p>I started my career in India as an<span>Instructor of Computer Subjects in Wandoor Block Panchayth Computer Center in Pandikkad Malappuram</span></p>
+                    <p>I started my career in India as an Instructor of Computer Subjects in Wandoor Block Panchayth Computer Center in Pandikkad Malappuram</p>
                 </div>
             </div>
         </div>
